PROJECT(glosm)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# Global options
IF(UNIX)
	SET(BUILD_TILER_DEFAULT ON)
ELSE(UNIX)
	SET(BUILD_TILER_DEFAULT OFF)
ENDIF(UNIX)

OPTION(BUILD_VIEWER "Build first-person osm viewer" ON)
OPTION(BUILD_TILER "Build tile generator" ${BUILD_TILER_DEFAULT})
OPTION(BUILD_EXAMPLES "Build examples" ON)
OPTION(BUILD_TESTS "Build tests" ON)

# Global definitions
ADD_DEFINITIONS(-Wall -Wextra)

# Framework subdirs
ADD_SUBDIRECTORY(libglosm-server)
ADD_SUBDIRECTORY(libglosm-client)
ADD_SUBDIRECTORY(libgeomgen-default)

# Application subdirs
IF(BUILD_VIEWER)
	ADD_SUBDIRECTORY(viewer)
ENDIF(BUILD_VIEWER)
IF(BUILD_TILER)
    #ADD_SUBDIRECTORY(tiler)
ENDIF(BUILD_TILER)
IF(BUILD_EXAMPLES)
    #ADD_SUBDIRECTORY(examples)
ENDIF(BUILD_EXAMPLES)
IF(BUILD_TESTS)
    #ENABLE_TESTING()
    #ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTS)
