# Depends
IF(BUILD_VIEWER_SDL)
	FIND_PACKAGE(SDL REQUIRED)
	SET(FRONTEND_SOURCES SDLMain.cc)
	SET(FRONTEND_LIBRARIES ${SDL_LIBRARY})
	SET(FRONTEND_INCLUDE_DIR ${SDL_INCLUDE_DIR})
ELSEIF(BUILD_VIEWER_GLUT)
	FIND_PACKAGE(GLUT REQUIRED)
	SET(FRONTEND_SOURCES GLUTMain.cc)
	SET(FRONTEND_LIBRARIES ${GLUT_LIBRARY})
	SET(FRONTEND_INCLUDE_DIR ${GLUT_INCLUDE_DIR})
ENDIF(BUILD_VIEWER_SDL)

# Targets
SET(SOURCES
	${FRONTEND_SOURCES}
	GlosmViewer.cc
)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${FRONTEND_INCLUDE_DIR} ${GLEW_INCLUDE_DIR} ../libglosm-client/include ../libglosm-server/include ../libglosm-geomgen/include)

ADD_EXECUTABLE(glosm-viewer ${SOURCES})
TARGET_LINK_LIBRARIES(glosm-viewer glosm-client glosm-server glosm-geomgen ${FRONTEND_LIBRARIES} ${GLEW_LIBRARY})

# Installation
INSTALL(TARGETS glosm-viewer RUNTIME DESTINATION ${BINDIR})
